# stable-diffusion-webui

./: pyproject.toml
modules/: extras.py  images.py  processing.py
modules/api/: api.py  models.py
